add timer and show the timer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="timer.js"></script>
     <meta charset="UTF-8">
     <title>Pomodoro timer</title>
   </head>
@@ -10,5 +11,7 @@
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+
+    <div id="session">25 : 00</div>
   </body>
 </html>
